<?xml version="1.0"?>
<package format="3">
  <name>benchmarking</name>
  <version>0.0.1</version>
  <description>Benchmarking package for OpenCV and OpenVINO.</description>
  
  <maintainer email="luzinaen@gmail.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>OpenVINO</depend>  <!-- Tambahkan OpenVINO di sini -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
