<?xml version="1.0"?>
<package format="3">
  <name>stmsubs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dadhitthana@gmail.com">donjoe</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stmface</build_depend>
  <build_depend>asio</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>stmface</exec_depend>
  <exec_depend>asio</exec_depend>

  <!-- Testing tools -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
